# movies-app

./: README.md
backend/: app.py  combine_datasets.py  pyproject.toml  requirements.txt
importer/: .import.py.swo  import.py  pyproject.toml  split_dataset.py
movies/: .gitignore  app.py  asda  historical_events.json:Zone.Identifier  package-lock.json  package.json  pyproject.toml
movies/public/: index.html  manifest.json
movies/src/: App.tsx
movies/src/components/filters/: filters.ts  index.tsx
movies/src/components/movie/: index.tsx
movies/templates/: .base.html.swp  base.html
